--- a/templates/index.html
+++ b/templates/index.html
@@ -131,7 +131,7 @@
             <li><a href="#drowsiness">Drowsiness Detection</a></li>
             <li><a href="#blindspot">Blind Spot Monitoring</a></li>
             <li><a href="#location">Location Tracking</a></li>
-            <li><button onclick="window.location.href='/dha'">3D Model</button></li>
+            <li>/<a href="/dha">View 3D Model</a></li>
         </ul>
     </nav>
 
